examples/test/testpolicy17444.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17444
  namespace: namespace345
spec:
  podSelector:
    matchLabels:
      key33: value40
      key32: value27
      key23: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value33
          key35: value18
          key40: value18
